# tiqora

./: .env.example  .gitignore  API_GAPS.md  Dockerfile  LICENSE  Makefile  NOTICE.md  README.md  SECURITY_REVIEW_FABLE.md  SECURITY_REVIEW_GROK.md  docker-compose.dev.yml  docker-compose.example.yml  justfile  package.json  pnpm-lock.yaml  pyproject.toml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions_owned/: 20260719_0006_owned_indexes.py  README.md
backend/alembic/versions_tiqora/: 20260719_0001_api_key_and_settings.py  20260719_0002_cache_invalidation.py  20260719_0003_event_outbox_and_form_draft.py  20260719_0004_kb_tables.py  20260719_0005_totp_and_webhook.py  20260720_0006_gdpr_audit.py  20260720_0007_crypto_key.py  20260720_0008_kb_acl_groups.py  20260720_0009_mail_outbound.py  20260720_0010_mail_log.py  20260720_0011_cache_invalidation_cache_type.py  20260720_0012_placeholder_variables.py  20260721_0013_api_key_metadata.py  20260721_0014_user_auth_config.py  20260721_0015_gdpr_erasure_job.py  20260721_0016_user_passkey.py  20260722_0017_ai_subsystem.py  20260722_0018_ai_vision.py  20260723_0019_summary_created_at.py  20260723_0020_ai_audit.py  20260723_0021_ai_agent_policy_fields.py  20260723_0022_ai_prompt_parts.py  20260723_0023_provider_pricing.py  20260723_0024_ner_summary_detail.py
backend/src/tiqora/: __init__.py  config.py  logging_setup.py  main.py
backend/src/tiqora/ai/: __init__.py  acl.py  attachment_context.py  attachments.py  audit.py  auto_worker.py  context.py  drafts.py  escalation.py  gate.py  kb_wiring.py  listfields.py  llm.py  mcp.py  models.py  ner.py  pii.py  policies.py  providers.py  reply_language.py  runtime.py  senders.py  summary.py  tools.py  usage.py  vision.py  worker.py
backend/src/tiqora/api/: __init__.py  app.py  deps.py  spa.py
backend/src/tiqora/api/compat/: __init__.py  operations.py  router.py  soap.py
backend/src/tiqora/api/portal/: __init__.py  attachments.py  auth.py  deps.py  kb.py  tickets.py
backend/src/tiqora/api/v1/: __init__.py  agents.py  ai.py  auth.py  calendar.py  channels_phone.py  channels_sms.py  channels_whatsapp.py  customers.py  events.py  kb.py  process.py  queues.py  reference.py  search.py  stats.py  tickets.py
backend/src/tiqora/bootstrap/: __init__.py  schema_loader.py
backend/src/tiqora/bootstrap/schema/: README.md  initial_insert.mysql.sql  schema.postgresql.sql
backend/src/tiqora/calendar/: __init__.py  ics.py  recurrence.py  schemas.py  service.py
backend/src/tiqora/channels/: __init__.py  common.py
backend/src/tiqora/channels/email/: __init__.py  autoresponse.py  fetch.py  filters.py  loop_protection.py  outbound_reply.py  parser.py  pipeline.py  placeholder.py  smtp.py
backend/src/tiqora/channels/phone/: __init__.py  service.py
backend/src/tiqora/channels/sms/: __init__.py  gateway.py  service.py
backend/src/tiqora/channels/whatsapp/: __init__.py  gateway.py  service.py
backend/src/tiqora/cli/: api_key.py  bootstrap.py  crypto.py  dev.py  gdpr.py  migrate.py  openapi.py  ownership.py
backend/src/tiqora/crypto/: __init__.py  inbound.py  keystore.py  outbound.py  pgp.py  secret.py  smime.py
backend/src/tiqora/db/: __init__.py  engine.py
backend/src/tiqora/db/legacy/: __init__.py  article.py  base.py  calendar.py  config.py  customer.py  dynamic_field.py  mail_account.py  (+6 more)
backend/src/tiqora/domain/: __init__.py  _ldap_core.py  article_html.py  auth.py  auth_config.py  auth_ldap.py  customer_auth.py  customer_auth_ldap.py  customer_service.py  dev_anonymize.py  dev_seed.py  history_render.py  mail_log.py  mail_outbound.py  oidc.py  orphan_report.py  ownership.py  passkey.py  portal_ticket_service.py  queue_service.py  quoting.py  schemas.py  search.py  settings_store.py  spnego.py  subject_hook.py  ticket_service.py  ticket_write_service.py  totp.py  totp_qr.py
backend/src/tiqora/events/: __init__.py  pubsub.py
backend/src/tiqora/gdpr/: __init__.py  anonymize.py  audit.py  erasure.py  gate.py  retention.py
backend/src/tiqora/kb/: __init__.py  chunker.py  models.py  schemas.py  service.py
backend/src/tiqora/mcp_server/: __init__.py  __main__.py  server.py
backend/src/tiqora/permissions/: __init__.py  engine.py
backend/src/tiqora/process/: __init__.py  config.py  engine.py  exceptions.py  graph.py  schemas.py  ticket_state.py
backend/src/tiqora/security/: __init__.py  csrf.py  outbound.py  ratelimit.py
backend/src/tiqora/stats/: __init__.py  schemas.py  service.py
backend/src/tiqora/storage/: __init__.py  backend.py
backend/src/tiqora/worker/: __init__.py  __main__.py  ai_audit_cleanup.py  broker.py  escalation.py  gdpr_erasure_purge.py  gdpr_retention.py  generic_agent.py  indexer.py  notifications.py  outbox_drain.py  poller.py  postmaster.py  services.py  status.py  webhooks.py
backend/src/tiqora/znuny/: __init__.py  cache_invalidation.py  escalation.py  followup.py  history.py  password.py  search_flag.py  sysconfig.py  ticket_index.py  ticket_number.py
backend/tests/: conftest.py  test_admin_api.py  test_admin_auth_config.py  test_admin_cache_type_invalidation.py  test_admin_channels.py  test_admin_daemons.py  test_admin_postmaster_filters.py  test_agent_email_outbound.py  test_agent_ticket_zoom_apis.py  test_agents_online.py  test_ai_acl_limits.py  test_ai_admin.py  test_ai_agent_policy_fields.py  test_ai_attachments.py  test_ai_audit.py  test_ai_auto_worker.py  test_ai_drafts.py  test_ai_escalation.py  test_ai_escalation_tester.py  test_ai_gate.py  test_ai_kb_wiring.py  test_ai_listfields.py  test_ai_ner.py  test_ai_pii.py  test_ai_prompt_parts.py  test_ai_reply_language.py  test_ai_runtime.py  test_ai_senders.py  test_ai_summary.py  test_ai_tool_trace.py  test_ai_tools.py  test_ai_usage_pricing.py  test_ai_vision.py  test_api_keys.py  test_article_bcc_reply_to_db.py  test_article_delete_db.py  test_article_html.py  test_attachment_filters.py  test_auth_hardening.py  test_auth_me_is_admin.py  (+94 more)
backend/tests/fixtures/znuny-schema/: README.md  initial_insert.postgresql.sql  schema.mysql.sql
(+383 files in other folders)
