[project]
name = "tiqora-workspace"
version = "0.0.0"
description = "Tiqora monorepo workspace root"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Cygnus Networks GmbH" }]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["backend"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend/src", "backend/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["tiqora"]
mypy_path = "backend/src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests", "tests"]
pythonpath = ["backend/src"]
