[project]
name = "tiqora"
version = "0.1.0"
description = "Tiqora — modern Znuny/OTRS 6.5-compatible ticket system"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Cygnus Networks GmbH" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "aiomysql>=0.2.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "taskiq>=0.11.0",
    "taskiq-redis>=1.0.0",
    "meilisearch-python-sdk>=3.0.0",
    "structlog>=24.4.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "testcontainers>=4.8.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-passlib>=1.7.7",
]

[project.scripts]
tiqora = "tiqora.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tiqora"]

[tool.hatch.build.targets.wheel.sources]
"src/tiqora" = "tiqora"

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["tiqora"]
mypy_path = "src"
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
