[project]
name = "tiqora"
version = "0.1.0"
description = "Tiqora — modern Znuny/OTRS 6.5-compatible ticket system"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Cygnus Networks GmbH" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "aiomysql>=0.2.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "taskiq>=0.11.0",
    "taskiq-redis>=1.0.0",
    "meilisearch-python-sdk>=3.0.0",
    "structlog>=24.4.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.0",
    "prometheus-client>=0.21.0",
    "pyyaml>=6.0.3",
    "bcrypt>=5.0.0",
    "nh3>=0.3.6",
    "fastmcp>=3.4.4",
    "authlib>=1.3.2",
    "pyotp>=2.9.0",
    "cryptography>=43.0.0",
    "aiosmtplib>=3.0.2",
    "ldap3>=2.9.1",
    "qrcode>=8.0",
]

[project.optional-dependencies]
kerberos = [
    "gssapi>=1.9.0",
]
crypto = [
    "python-gnupg>=0.5.2",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "testcontainers>=4.8.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-passlib>=1.7.7",
    "types-pyyaml>=6.0.12.20260518",
    "pymysql>=1.2.0",
    "psycopg2-binary>=2.9.12",
]

[project.scripts]
tiqora = "tiqora.main:main"
tiqora-mcp = "tiqora.mcp_server.__main__:run_mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tiqora"]

[tool.hatch.build.targets.wheel.sources]
"src/tiqora" = "tiqora"

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["tiqora"]
mypy_path = "src"
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "authlib.*",
    "gssapi",
    "gssapi.*",
    "pyotp",
    "pyotp.*",
    "ldap3",
    "ldap3.*",
    "qrcode",
    "qrcode.*",
    "gnupg",
    "gnupg.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "db: integration tests that require Docker (testcontainers MariaDB/Postgres)",
    "search: integration tests that require Meilisearch (testcontainers)",
    "golden: golden-master tests comparing real Znuny vs Tiqora (GOLDEN=1, needs Docker, see tests/golden/)",
]

[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.12",
    "pymysql>=1.2.0",
    "faker>=37.0.0",
]
