[project]
name = "tiqora"
version = "0.1.0"
description = "Tiqora — modern Znuny/OTRS 6.5-compatible ticket system"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Cygnus Networks GmbH" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "aiomysql>=0.2.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "meilisearch-python-sdk>=3.0.0",
    "structlog>=24.4.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.0",
    "prometheus-client>=0.21.0",
    "pyyaml>=6.0.3",
    "bcrypt>=5.0.0",
    "nh3>=0.3.6",
    "fastmcp>=3.4.4",
    "authlib>=1.3.2",
    "pyotp>=2.9.0",
    "cryptography>=43.0.0",
    "aiosmtplib>=3.0.2",
    "ldap3>=2.9.1",
    "qrcode>=8.0",
    "defusedxml>=0.7.1",
    "webauthn>=2",
    # Sync drivers used by tiqora bootstrap (base-schema load) and tests.
    "pymysql>=1.2.0",
    "psycopg2-binary>=2.9.12",
    # GDPR anonymize engine (ValueMapper) draws replacement values via faker
    # at runtime — must ship in the prod image, not just the dev group.
    "faker>=37.0.0",
    # AI attachment text extraction (tiqora.ai.attachments) — runs inside the
    # agent runtime/summary render path, must ship in the prod image.
    "pypdf>=5",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "odfpy>=1.4",
    # NER-based person-name detection feeding PII masking (tiqora.ai.ner) —
    # runs inside the agent runtime/summary render path, must ship in the
    # prod image, not just the dev group.
    "spacy>=3.8,<3.9",
    "de_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.8.0/de_core_news_sm-3.8.0-py3-none-any.whl",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[project.optional-dependencies]
kerberos = [
    "gssapi>=1.9.0",
]
crypto = [
    "python-gnupg>=0.5.2",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "testcontainers>=4.8.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-passlib>=1.7.7",
    "types-pyyaml>=6.0.12.20260518",
    "types-defusedxml>=0.7.0.20260504",
    "pymysql>=1.2.0",
    "psycopg2-binary>=2.9.12",
]

[project.scripts]
tiqora = "tiqora.main:main"
tiqora-mcp = "tiqora.mcp_server.__main__:run_mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# de_core_news_sm / en_core_web_sm ship as direct-URL wheel dependencies
# (spaCy models are not on PyPI) — see tiqora.ai.ner.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tiqora"]

[tool.hatch.build.targets.wheel.sources]
"src/tiqora" = "tiqora"

# The Znuny base-schema SQL under src/tiqora/bootstrap/schema/ (tiqora bootstrap /
# Docker image) ships via the package tree above — hatch includes non-.py data
# files in the package dir. A force-include here would double-add every file and
# fail the wheel build ("second file added at the same path").

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["tiqora"]
mypy_path = "src"
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "authlib.*",
    "gssapi",
    "gssapi.*",
    "pyotp",
    "pyotp.*",
    "ldap3",
    "ldap3.*",
    "qrcode",
    "qrcode.*",
    "gnupg",
    "gnupg.*",
    "webauthn",
    "webauthn.*",
    "pymysql",
    "pymysql.*",
    "psycopg2",
    "psycopg2.*",
    "docx",
    "docx.*",
    "odf",
    "odf.*",
    "openpyxl",
    "openpyxl.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "db: integration tests that require Docker (testcontainers MariaDB/Postgres)",
    "search: integration tests that require Meilisearch (testcontainers)",
    "golden: golden-master tests comparing real Znuny vs Tiqora (GOLDEN=1, needs Docker, see tests/golden/)",
]

[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.12",
    "pymysql>=1.2.0",
]
